[package]
name = "CommentRanking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_distr = "0.4.3"
rand = "0.8.5"
log = "0.4.22"
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.18"
env_logger = "0.11.5"
strum = "0.26.3"
strum_macros = "0.26.4"
csv = "1.3.0"